--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "ajv": "^6.1.1",
+    "docco": "^0.8.0",
     "eslint": "^4.18.1",
+    "mocha": "^5.0.1",
     "npm": "^5.6.0"
   },
   "devDependencies": {},
