--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "theliterature",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Zotero plugin for auto-fetching pdfs from Sci-Hub",
+  "main": "chrome/content/scripts/include.js",
   "directories": {
     "test": "tests"
   },
@@ -10,6 +10,7 @@
     "ajv": "^6.1.1",
     "docco": "^0.8.0",
     "eslint": "^4.18.1",
+    "jpm": "^1.3.1",
     "mocha": "^5.0.1",
     "npm": "^5.6.0"
   },
